--- a/index.html
+++ b/index.html
@@ -17,22 +17,12 @@
 
 <style type="text/css">
 	table {
-		width: 100%;
+		width: 50%;
 		text-align: center;
-		border: 1px solid lightgrey;
+		border-collapse: collapse;
 	}
-	table td {
-	    border-top: thin solid; 
-	    border-bottom: thin solid;
-		border-color: lightgrey;
-	}
-
-	table td:first-child {
-	    border-left: thin solid;
-	}
-
-	table td:last-child {
-	    border-right: thin solid;
+	table, td, th {
+	    border: 1px solid lightgrey;
 	}
 	#head-row {
 		background-color: lightgrey;
