--- a/index.html
+++ b/index.html
@@ -50,14 +50,14 @@
 
 			// var totalPosts = 400;
 
-			// for (var offset = 0; offset < totalPosts; offset += 100) {
-			// 	var requestURL = '/600250886752341/posts?limit=100&offset=' + offset;
+			for (var offset = 0; offset < totalPosts; offset += 100) {
+				var requestURL = '/600250886752341/posts?limit=100&offset=' + offset;
 				
-			// 	// request for posts with some offset
-			// 	request(requestURL);
-			// } 
+				// request for posts with some offset
+				request(requestURL);
+			} 
 
-			request1();
+			//request1();
 
 		  } 
 
