--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 		  if (response.status=="connected") {
 			console.log("You're logged in");
 
-			// var totalPosts = 400;
+			var totalPosts = 400;
 
 			for (var offset = 0; offset < totalPosts; offset += 100) {
 				var requestURL = '/600250886752341/posts?limit=100&offset=' + offset;
