--- a/index.html
+++ b/index.html
@@ -57,8 +57,6 @@
 				request(requestURL);
 			} 
 
-			//request1();
-
 		  } 
 
 		}); 
@@ -68,7 +66,7 @@
 		var js, fjs = d.getElementsByTagName(s)[0];
 		if (d.getElementById(id)) {return;}
 		js = d.createElement(s); js.id = id;
-		js.src = "//connect.facebook.net/en_US/sdk.js";
+		js.src = "https://connect.facebook.net/en_US/all.js";
 		fjs.parentNode.insertBefore(js, fjs);
 	}(document, 'script', 'facebook-jssdk')); 
 
@@ -98,32 +96,6 @@
    				makeTable();
 	   	   }
 
-		});
-	}
-
-	function request1() {
-		
-		FB.api('/600250886752341/posts?limit=100', 'get', { }, function(response) {
-		   console.log(response);
-
-		   // if there is post data returned from Facebook
-		   if (response.data.length > 0) {
-		   		var postIDs = convertJSONToArray(response);
-		   		console.log(postIDs);
-
-		   		// if there are postIDs find out who liked/commented each post
-		   		var postCount = postIDs.length;
-		   		if (postCount > 0) {
-	   				console.log('valid array');
-	   				for (var i = 0; i < postCount; i++) {
-	   					var postID = postIDs[i];
-	   					getLikesOfPostWithID(postID);
-	   					getCommentsOfPostWithID(postID);
-	   				};
-		   				
-		   		} 
-		   }
-		   //makeTable();
 		});
 	}
 
