--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
 <script>
-	var BASE_URL = 'https://graph.facebook.com';
+	var BASE_URL = 'https://graph.facebook.com/';
 
 	var members = [];
 
@@ -109,11 +109,11 @@
 
 	function getLikesOfPostWithID(id) {
 		console.log("entered getLikesOfPostWithID");
-		FB.api(BASE_URL + '/' + id + '/likes', 'get', { }, function(response) {
-		  console.log(response);
+		FB.api(BASE_URL + id + '/likes', 'get', { }, function(response) {
 		  var peopleWhoLikeThis = response.data;
 		  console.log(peopleWhoLikeThis);
 		  var peopleCount = peopleWhoLikeThis.length;
+		  console.log(peopleCount);
 		  for (var i = 0; i < peopleCount; i++) {
 		  	var userID = String(peopleWhoLikeThis[i].id);
 		  	
@@ -145,7 +145,7 @@
 		  for (var i = 0; i < peopleCount; i++) {
 		  	var userID = String(peopleWhoCommented[i].from.id);
 		  	
-		  	FB.api(BASE_URL + '/' + userID, { }, { }, function(response) {
+		  	FB.api(BASE_URL + userID, { }, { }, function(response) {
 		  		name = response.name;
 
 		  		if (members[name] == undefined) {
