--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@ CAAP895ahySoBAFBZBnf1t221y0dQfnLUaP5X7BUZCvaZAZCH42To2MnEyw489bSD1NMywRLyAMkq1Ao
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
 <script>
 	var BASE_URL = 'https://graph.facebook.com/';
-	var END_URL = '?access_token=CAAP895ahySoBAFBZBnf1t221y0dQfnLUaP5X7BUZCvaZAZCH42To2MnEyw489bSD1NMywRLyAMkq1Ao8SRTX57kNtdu0Q4LFk0yOwF1PwdNHupNbAvGkxcFtUgigJhHlv45IR8ZAuh0jjs74MCDtzLBrtOOadjVQpF6dBmwLpevgC07ufDfzDStH5BKZC4gPEZD'
+	var END_URL = '&access_token=CAAP895ahySoBAFBZBnf1t221y0dQfnLUaP5X7BUZCvaZAZCH42To2MnEyw489bSD1NMywRLyAMkq1Ao8SRTX57kNtdu0Q4LFk0yOwF1PwdNHupNbAvGkxcFtUgigJhHlv45IR8ZAuh0jjs74MCDtzLBrtOOadjVQpF6dBmwLpevgC07ufDfzDStH5BKZC4gPEZD'
 
 	var members = [];
 
